<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/carditem"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#FFFCFF"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFCFF">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/josefin_sans_semibold"
                android:text="@string/madonna_child"
                android:textColor="#1B1B1E"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/josefin_sans"
                android:text="@string/giovanni_bellini"
                android:textColor="#696969"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/description"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/josefin_sans_light"
                android:text="@string/giovanniDescription"
                android:textColor="#696969"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/artist" />

            <TextView
                android:id="@+id/price"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="33dp"
                android:fontFamily="@font/josefin_sans_semibold"
                android:text="@string/rs_15_000"
                android:textColor="#1B1B1E"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <Button
                android:id="@+id/BUY"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="34dp"
                android:background="@drawable/rounded_corners"
                android:fontFamily="@font/josefin_sans"
                android:text="BUY"
                android:textColor="#FFFCFF"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="34dp"
                android:background="@drawable/rounded_button"
                android:contentDescription="@string/wishlist_button"
                android:tint="#FFFCFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/BUY"
                app:srcCompat="@drawable/ic_wishlist" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>