<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".exhibitFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/josefin_sans"
                android:text="@string/exhibit"
                android:textColor="#9B9B9B"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/josefin_sans_bold"
                android:text="LOCATION"
                android:textColor="#1B1B1E"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header" />

            <ImageView
                android:id="@+id/exhibitImage"
                android:layout_width="0dp"
                android:layout_height="500dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:contentDescription="@string/image_view"
                android:focusable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/abstract2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_corners"
                android:fontFamily="@font/josefin_sans_light"
                android:text="@string/next"
                android:textColor="#FFFCFF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exhibitImage" />

            <Button
                android:id="@+id/prevButton"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_corners"
                android:fontFamily="@font/josefin_sans_light"
                android:text="@string/prev"
                android:textColor="#FFFCFF"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exhibitImage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <!-- TODO: Update blank fragment layout -->


</FrameLayout>